Casi no hice nada hoy

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -28,23 +28,25 @@
       <mat-icon>menu</mat-icon>
     </button>
 
+
     <span class="spacer"></span>
-    <button mat-button>
+    <!-- <button mat-button>
+      <img src="assets/anime3.png" alt="">
       Logout
-    </button>
+    </button> -->
+    <div class="logout-container">
+      <button mat-button>
+        Logout
+      </button>
+
+      <img src="assets/anime3.png" alt="" class="profile-image">
+    </div>
 
   </mat-toolbar>
-
 
   <div class="container">
     <router-outlet></router-outlet>
   </div>
 
 </mat-sidenav-container>
-
-
-
-
-
-
 
