Clase heroes continuacion en casa

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -28,18 +28,15 @@
       <mat-icon>menu</mat-icon>
     </button>
 
+      <span class="mx-5">SGT - DE LA PAZ</span>
 
     <span class="spacer"></span>
-    <!-- <button mat-button>
-      <img src="assets/anime3.png" alt="">
-      Logout
-    </button> -->
+
     <div class="logout-container">
       <button mat-button>
+        <mat-icon>person</mat-icon>
         Logout
       </button>
-
-      <img src="assets/anime3.png" alt="" class="profile-image">
     </div>
 
   </mat-toolbar>
