--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-column">
+<!-- <div class="flex flex-column" >
   <span class="text-lg mb-4">Login</span>
 
   <mat-form-field>
@@ -21,4 +21,28 @@
 
   </div>
 
+</div> -->
+
+
+<div class="flex flex-column">
+  <span class="text-md mb-2">Login</span>
+
+  <mat-form-field class="mb-2">
+    <mat-label>Usuario</mat-label>
+    <input type="text" matInput placeholder="Nombre de usuario">
+  </mat-form-field>
+
+  <mat-form-field class="mb-2">
+    <mat-label>Contraseña</mat-label>
+    <input type="text" matInput placeholder="Contraseña">
+  </mat-form-field>
+
+  <button mat-button mat-flat-button color="primary" class="mt-2">
+    <mat-icon>save</mat-icon>
+    Ingresar
+  </button>
+
+  <div class="flex justify-content-end mt-2">
+    <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
+  </div>
 </div>
